--- a/index.html
+++ b/index.html
@@ -1,20 +1,17 @@
 <body>
-<p> This is h1 </p>
-<p> h2 </p>
-<p> h3 </p>
-<!-- This is a welcome Tag -->
- <img src="Images/images.jpg" alt="">
-<h1> Welcome to my website </h1>
-<p> We are the  first company to host the US President </p>
-<a href="about.html"> about us </a>
-<a href="services.html"> book us </a>
-<!-- About Us section -->
-<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, reprehenderit. </p>
-<p> Write some things </p>
-<!-- Our Services section -->
- <img src="Images/Buses.jpg" alt="">
-<p> Our Services include washing of cars</p>
-<ul>
-    <li> Dancing</li>
-    <li> Singing </li>  
+<h1> Welcome to Fortune's Website </h1>
+<img src="Images/Main Heading.jpg" alt="">
+<h2> About Us </h2>
+<img src="Images/About us.jpg" alt="">
+<p> Welcome to Fortune's Website, a trusted place to provide services, 
+    and solutions to all. We make customer support more effective with 
+    the use of dedicated Technical Support Engineers and AI/cognitive computing. </p>
+<h3> Navigation </h3>
+<a href="contact.html "> Contact </a>
+<u1>
+    <li>Faqs</li>
+    <li>Careers</li>
+    <li>Terms of use</li>
+    <li>Privacy Policy</li>
+</u1>
 </body>
