--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <body>
-<h1>Welcome to Fortune's Website</h1>
+<h1> Welcome to Fortune's Website </h1>
 <img src="Images/Main Heading.jpg" alt="">
-<h2>About Us</h2>
+<h2> About Us </h2>
 <img src="Images/About us.jpg" alt="">
-<p>
-Welcome to Fortune's Website, a trusted place to provide services 
-and solutions to all. We make customer support more effective with 
-the use of dedicated Technical Support Engineers and AI/cognitive computing.
-</p>
-<h3>Navigation</h3>
-<a href="contact.html">Contact</a>
-<ul>
+<p> Welcome to Fortune's Website, a trusted place to provide services, 
+    and solutions to all. We make customer support more effective with 
+    the use of dedicated Technical Support Engineers and AI/cognitive computing. </p>
+<h3> Navigation </h3>
+<a href="contact.html "> Contact </a>
+<u1>
     <li>Faqs</li>
     <li>Careers</li>
     <li>Terms of use</li>
     <li>Privacy Policy</li>
-</ul>
+</u1>
 </body>
